--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-md-4">
-                <img id="portrait" src="/img/portrait.jpg" class="img-fluid" alt="Placeholder Image">
+                <img id="portrait" src="img/portrait.jpg" class="img-fluid" alt="Placeholder Image">
             </div>
         </div>
         <div class="row justify-content-center mt-4">
@@ -60,10 +60,10 @@
     <!-- Footer -->
     <footer class="text-center mt-4">
         <a href="https://github.com/a-nunley" target="_blank" class="me-3">
-            <img alt="GitHub" id="git-link" src="/img/github.png" class="img-fluid link-image">
+            <img alt="GitHub" id="git-link" src="img/github.png" class="img-fluid link-image">
         </a>
         <a href="https://www.linkedin.com/in/alex-nunley-097266208/" target="_blank">
-            <img alt="LinkedIn" id="linkedin-link" src="/img/linkedin.png" class="img-fluid link-image">
+            <img alt="LinkedIn" id="linkedin-link" src="img/linkedin.png" class="img-fluid link-image">
         </a>
     </footer>
 
