--- a/pages/projects.html
+++ b/pages/projects.html
@@ -6,7 +6,7 @@
     <title>Projects</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style/styles.css">
+    <link rel="stylesheet" href="../style/styles.css">
 </head>
 <body>
     <!-- Navbar -->
@@ -19,7 +19,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="pages/projects.html">Projects</a>
@@ -44,7 +44,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="img/spongebob.png" class="card-img-top" alt="Spongebob v Doodlebob" id="projecticons">
+                        <img src="../img/spongebob.png" class="card-img-top" alt="Spongebob v Doodlebob" id="projecticons">
                         <div class="card-body">
                             <h5 class="card-title">Spongebob v Doodlebob</h5>
                             <p class="card-text">A basic html game which features the dragable() function in Javascript</p>
@@ -56,7 +56,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="img/dolphin.png" class="card-img-top" alt="Spirit Animal" id="projecticons">
+                        <img src="../img/dolphin.png" class="card-img-top" alt="Spirit Animal" id="projecticons">
                         <div class="card-body">
                             <h5 class="card-title">Spirit Animal</h5>
                             <p class="card-text">A basic html game which features the math.random function in JavaScript</p>
@@ -77,7 +77,7 @@
 </body>
 <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
+      <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-muted">Home</a></li>
       <li class="nav-item"><a href="pages/projects.html" class="nav-link px-2 text-muted">Projects</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Nu Validator</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Source Code </a></li>
