--- a/pages/projects.html
+++ b/pages/projects.html
@@ -25,7 +25,7 @@
                         <a class="nav-link" href="pages/projects.html">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Source Code</a>
+                        <a class="nav-link" href="https://github.com/a-nunley/a-nunley">Source Code</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Nu Validator</a>
@@ -80,7 +80,7 @@
       <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-muted">Home</a></li>
       <li class="nav-item"><a href="pages/projects.html" class="nav-link px-2 text-muted">Projects</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Nu Validator</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Source Code </a></li>
+      <li class="nav-item"><a href="https://github.com/a-nunley/a-nunley" class="nav-link px-2 text-muted">Source Code </a></li>
     </ul>
     <p class="text-center text-muted">&copy; 2022 Company, Inc</p>
   </footer>
