--- a/pages/projects.html
+++ b/pages/projects.html
@@ -22,7 +22,7 @@
                         <a class="nav-link" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pages/projects.html">Projects</a>
+                        <a class="nav-link" href="projects.html">Projects</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://github.com/a-nunley/a-nunley">Source Code</a>
