--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alex's Profile</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="style/styles.css" rel="stylesheet"> 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> 
+    <link href="style/styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Alex's Portfolio</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -40,7 +43,8 @@
     <div class="container mt-4 text-center">
         <p id="welcome"><strong>Welcome!</strong></p>
         <div id="cooltypingthing">
-            <img src="https://readme-typing-svg.demolab.com?font=Fira+Code&pause=1000&color=F70000&center=true&width=435&lines=Christian%2C+God+is+first%E2%9C%9D%EF%B8%8F;Cybersecurity+specialist%F0%9F%A7%91%E2%80%8D%F0%9F%92%BB;Huge+gamer+and+nerd%F0%9F%A4%93;Gym+Addict%F0%9F%92%AA;Python%2C+CSS%2C+HTML+Developer%F0%9F%A7%91%E2%80%8D%F0%9F%92%BB" alt="Typing SVG">
+            <img src="https://readme-typing-svg.demolab.com?font=Fira+Code&pause=1000&color=F70000&center=true&width=435&lines=Christian%2C+God+is+first%E2%9C%9D%EF%B8%8F;Cybersecurity+specialist%F0%9F%A7%91%E2%80%8D%F0%9F%92%BB;Huge+gamer+and+nerd%F0%9F%A4%93;Gym+Addict%F0%9F%92%AA;Python%2C+CSS%2C+HTML+Developer%F0%9F%A7%91%E2%80%8D%F0%9F%92%BB"
+                alt="Typing SVG">
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-md-4">
@@ -51,7 +55,8 @@
             <div class="col-md-8 profile-info">
                 <p>My name is Alexander Nunley (Alex)</p>
                 <p>I am a passionate IT enthusiast</p>
-                <p>I am an Information Technology student at the University of North Alabama. My concentration is Cybersecurity.</p>
+                <p>I am an Information Technology student at the University of North Alabama. My concentration is
+                    Cybersecurity.</p>
                 <p>My specialties include Python, MySQL, CSS, HTML, hardware troubleshooting, and IT support.</p>
             </div>
         </div>
@@ -68,16 +73,17 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
+    <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item"><a href="/index.html" class="nav-link px-2 text-muted">Home</a></li>
+            <li class="nav-item"><a href="/pages/projects.html" class="nav-link px-2 text-muted">Projects</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Nu Validator</a></li>
+            <li class="nav-item"><a href="https://github.com/a-nunley/a-nunley" class="nav-link px-2 text-muted">Source
+                    Code </a></li>
+        </ul>
+        <p class="text-center text-muted">&copy; 2022 Company, Inc</p>
+    </footer>
 </body>
 
-<footer class="py-3 my-4">
-  <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-    <li class="nav-item"><a href="/index.html" class="nav-link px-2 text-muted">Home</a></li>
-    <li class="nav-item"><a href="/pages/projects.html" class="nav-link px-2 text-muted">Projects</a></li>
-    <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Nu Validator</a></li>
-    <li class="nav-item"><a href="https://github.com/a-nunley/a-nunley" class="nav-link px-2 text-muted">Source Code </a></li>
-  </ul>
-  <p class="text-center text-muted">&copy; 2022 Company, Inc</p>
-</footer>
 </html>
