--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,12 +9,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../style/styles.css">
 </head>
+
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">Alex's Portfolio</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -44,13 +47,17 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="../img/spongebob.png" class="card-img-top" alt="Spongebob v Doodlebob" id="projecticons">
+                        <img src="../img/spongebob.png" class="card-img-top" alt="Spongebob v Doodlebob"
+                            id="projecticons">
                         <div class="card-body">
                             <h5 class="card-title">Spongebob v Doodlebob</h5>
-                            <p class="card-text">A basic html game which features the dragable() function in Javascript</p>
-                            <a href="https://a-nunley.github.io/dev-david/" target="_blank" class="btn btn-primary">Play!</a>
+                            <p class="card-text">A basic html game which features the dragable() function in Javascript
+                            </p>
+                            <a href="https://a-nunley.github.io/dev-david/" target="_blank"
+                                class="btn btn-primary">Play!</a>
                             <p></p>
-                            <a href="https://github.com/a-nunley/dev-david" target="_blank" class="btn btn-primary">Source Code</a>
+                            <a href="https://github.com/a-nunley/dev-david" target="_blank"
+                                class="btn btn-primary">Source Code</a>
                         </div>
                     </div>
                 </div>
@@ -59,10 +66,13 @@
                         <img src="../img/dolphin.png" class="card-img-top" alt="Spirit Animal" id="projecticons">
                         <div class="card-body">
                             <h5 class="card-title">Spirit Animal</h5>
-                            <p class="card-text">A basic html game which features the math.random function in JavaScript</p>
-                            <a href="https://a-nunley.github.io/CIS-376/" target="_blank" class="btn btn-primary">Play!</a>
+                            <p class="card-text">A basic html game which features the math.random function in JavaScript
+                            </p>
+                            <a href="https://a-nunley.github.io/CIS-376/" target="_blank"
+                                class="btn btn-primary">Play!</a>
                             <p></p>
-                            <a href="https://github.com/a-nunley/CIS-376" target="_blank" class="btn btn-primary">Source Code</a>
+                            <a href="https://github.com/a-nunley/CIS-376" target="_blank" class="btn btn-primary">Source
+                                Code</a>
                         </div>
                     </div>
                 </div>
@@ -74,14 +84,16 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <footer class="py-3 my-4">
+        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-muted">Home</a></li>
+            <li class="nav-item"><a href="pages/projects.html" class="nav-link px-2 text-muted">Projects</a></li>
+            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Nu Validator</a></li>
+            <li class="nav-item"><a href="https://github.com/a-nunley/a-nunley" class="nav-link px-2 text-muted">Source
+                    Code </a></li>
+        </ul>
+        <p class="text-center text-muted">&copy; 2022 Company, Inc</p>
+    </footer>
 </body>
-<footer class="py-3 my-4">
-    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-muted">Home</a></li>
-      <li class="nav-item"><a href="pages/projects.html" class="nav-link px-2 text-muted">Projects</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Nu Validator</a></li>
-      <li class="nav-item"><a href="https://github.com/a-nunley/a-nunley" class="nav-link px-2 text-muted">Source Code </a></li>
-    </ul>
-    <p class="text-center text-muted">&copy; 2022 Company, Inc</p>
-  </footer>
+
 </html>
