--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                         <a class="nav-link" href="pages/projects.html">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/a-nunley/a-nunley">Source Code</a>
+                        <a class="nav-link" href="https://github.com/a-nunley/a-nunley" target ="_blank">Source Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Nu Validator</a>
+                        <a class="nav-link" href="https://validator.nu/?doc=https%3A%2F%2Fa-nunley.github.io%2Fa-nunley%2F" target ="_blank">Nu Validator</a>
                     </li>
                 </ul>
             </div>
@@ -78,8 +78,8 @@
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item"><a href="/index.html" class="nav-link px-2 text-muted">Home</a></li>
             <li class="nav-item"><a href="/pages/projects.html" class="nav-link px-2 text-muted">Projects</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Nu Validator</a></li>
-            <li class="nav-item"><a href="https://github.com/a-nunley/a-nunley" class="nav-link px-2 text-muted">Source
+            <li class="nav-item"><a href="https://validator.nu/?doc=https%3A%2F%2Fa-nunley.github.io%2Fa-nunley%2F" target ="_blank" class="nav-link px-2 text-muted">Nu Validator</a></li>
+            <li class="nav-item"><a href="https://github.com/a-nunley/a-nunley" target ="_blank" class="nav-link px-2 text-muted">Source
                     Code </a></li>
         </ul>
         <p class="text-center text-muted">&copy; 2022 Company, Inc</p>
