--- a/pages/projects.html
+++ b/pages/projects.html
@@ -28,10 +28,12 @@
                         <a class="nav-link" href="projects.html">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/a-nunley/a-nunley">Source Code</a>
+                        <a class="nav-link" href="https://github.com/a-nunley/a-nunley" target="_blank" 
+                           rel="noopener noreferrer">Source Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Nu Validator</a>
+                        <a class="nav-link" href="https://validator.nu/?doc=https%3A%2F%2Fa-nunley.github.io%2Fa-nunley%2F" 
+                           target="_blank" rel="noopener noreferrer">Nu Validator</a>
                     </li>
                 </ul>
             </div>
@@ -43,36 +45,33 @@
         <section>
             <h1>Projects</h1>
             <p>Welcome to the projects page. Here you will find a list of all of my projects.</p>
-            <!-- Add your project details here -->
             <div class="row">
+                <!-- Project 1 -->
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="../img/spongebob.png" class="card-img-top" alt="Spongebob v Doodlebob"
-                            id="projecticons">
+                        <img src="../img/spongebob.png" class="card-img-top" alt="Spongebob v Doodlebob" id="projecticons">
                         <div class="card-body">
                             <h5 class="card-title">Spongebob v Doodlebob</h5>
-                            <p class="card-text">A basic html game which features the dragable() function in Javascript
-                            </p>
-                            <a href="https://a-nunley.github.io/dev-david/" target="_blank"
-                                class="btn btn-primary">Play!</a>
-                            <p></p>
-                            <a href="https://github.com/a-nunley/dev-david" target="_blank"
-                                class="btn btn-primary">Source Code</a>
+                            <p class="card-text">A basic HTML game which features the <code>draggable()</code> function in JavaScript.</p>
+                            <a href="https://a-nunley.github.io/dev-david/" target="_blank" 
+                               class="btn btn-primary" rel="noopener noreferrer">Play!</a>
+                            <a href="https://github.com/a-nunley/dev-david" target="_blank" 
+                               class="btn btn-primary mt-2" rel="noopener noreferrer">Source Code</a>
                         </div>
                     </div>
                 </div>
+
+                <!-- Project 2 -->
                 <div class="col-md-4">
                     <div class="card">
                         <img src="../img/dolphin.png" class="card-img-top" alt="Spirit Animal" id="projecticons">
                         <div class="card-body">
                             <h5 class="card-title">Spirit Animal</h5>
-                            <p class="card-text">A basic html game which features the math.random function in JavaScript
-                            </p>
-                            <a href="https://a-nunley.github.io/CIS-376/" target="_blank"
-                                class="btn btn-primary">Play!</a>
-                            <p></p>
-                            <a href="https://github.com/a-nunley/CIS-376" target="_blank" class="btn btn-primary">Source
-                                Code</a>
+                            <p class="card-text">A basic HTML game which uses the <code>Math.random()</code> function in JavaScript.</p>
+                            <a href="https://a-nunley.github.io/CIS-376/" target="_blank" 
+                               class="btn btn-primary" rel="noopener noreferrer">Play!</a>
+                            <a href="https://github.com/a-nunley/CIS-376" target="_blank" 
+                               class="btn btn-primary mt-2" rel="noopener noreferrer">Source Code</a>
                         </div>
                     </div>
                 </div>
@@ -80,20 +79,23 @@
         </section>
     </div>
 
-    <footer class="text-center mt-4">
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Footer -->
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-muted">Home</a></li>
-            <li class="nav-item"><a href="pages/projects.html" class="nav-link px-2 text-muted">Projects</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Nu Validator</a></li>
-            <li class="nav-item"><a href="https://github.com/a-nunley/a-nunley" class="nav-link px-2 text-muted">Source
-                    Code </a></li>
+            <li class="nav-item"><a href="projects.html" class="nav-link px-2 text-muted">Projects</a></li>
+            <li class="nav-item">
+                <a href="https://validator.nu/?doc=https%3A%2F%2Fa-nunley.github.io%2Fa-nunley%2F" 
+                   target="_blank" class="nav-link px-2 text-muted" rel="noopener noreferrer">Nu Validator</a>
+            </li>
+            <li class="nav-item">
+                <a href="https://github.com/a-nunley/a-nunley" target="_blank" class="nav-link px-2 text-muted" 
+                   rel="noopener noreferrer">Source Code</a>
+            </li>
         </ul>
-        <p class="text-center text-muted">&copy; 2022 Company, Inc</p>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
