--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <!-- Additional Footer with Navigation Links -->
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item"><a href="/index.html" class="nav-link px-2 text-muted">Home</a></li>
+            <li class="nav-item"><a href="" class="nav-link px-2 text-muted">Home</a></li>
             <li class="nav-item"><a href="/pages/projects.html" class="nav-link px-2 text-muted">Projects</a></li>
             <li class="nav-item"><a href="https://validator.nu/?doc=https%3A%2F%2Fa-nunley.github.io%2Fa-nunley%2F" 
                                     target="_blank" class="nav-link px-2 text-muted">Nu Validator</a></li>
